--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body {
   overflow: hidden;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 .background .circle-top {
@@ -55,6 +56,7 @@ body {
   width: 90vw;
   max-width: 450px;
   margin: auto;
+  box-shadow: 0 10px 100px rgba(0, 0, 0, 0.3);
 }
 
 .card .card-background-top {
@@ -115,6 +117,10 @@ body {
   margin-top: 0.25rem;
   letter-spacing: 0.1rem;
   font-size: 0.75rem;
+}
+
+hr {
+  opacity: 0.3;
 }
 
 @media only screen and (min-width: 430px) {
